<resources>
    <string name="app_name">MediaLib</string>
    <string name="sticker">贴纸</string>
    <string name="filter">滤镜</string>
    <string name="magic">魔镜</string>
    <string name="beauty">美颜</string>
    <string name="text">文字</string>
    <string name="adjust">调整</string>
    <string name="at">圈人</string>
    <string name="frame">边框</string>
    <string name="cut">裁剪</string>
    <string name="mosaic">马赛克</string>
    <string name="more_stickers">贴纸库</string>
    <string name="camera_sticker_input_hint">单击输入</string>
    <string name="intelligence_filter">智能滤镜</string>
    <string name="image_clip_mirror">镜像</string>
    <string name="image_clip_ratio">比例</string>
    <string name="image_clip_rotate">旋转</string>
    <string name="image_save_failed">保存图片失败</string>
    <string name="image_save_success">图片已保存</string>
    <string name="draw">马赛克</string>
    <string name="camera_music">音乐</string>
    <string name="camera_time_down">倒计时</string>
    <string name="camera_speed">快慢拍</string>
    <string name="camera_prop">道具</string>
    <string name="camera_count_down_start">开始</string>
    <string name="camera_disabled">无法打开相机，请检查应用使用相机安全策略.</string>
    <string name="camera_error_title">相机错误</string>
    <string name="camera_paster_closearrow">收起</string>
    <string name="camera_paster_openarrow">更多</string>
    <string name="camera_tagpoint_editor_max">"已达添加上限
最多添加5个标签"</string>
    <string name="cannot_connect_camera">无法打开相机，请检查应用使用相机权限.</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_ok">确定</string>
    <string name="combining">正在合成…</string>
    <string name="record_video_failed">视频录制失败</string>
    <string name="cancel">取消</string>
    <string name="change_music">更换音乐</string>
    <string name="cancel_music">不用音乐</string>
    <string name="exit_shoot">退出拍摄</string>
    <string name="re_shoot">重新拍摄</string>
    <string name="loading_text">正在加载</string>
    <string name="bottom_end_text">到底儿都被你看光啦~</string>
    <string name="network_error">网络不给力，请稍后再试</string>
    <string name="load_failed_retry">"加载失败
点击页面重新加载"</string>
    <string name="empty_text">这里空空如也</string>
    <string name="music_cut_failed">音乐剪裁失败</string>
    <string name="music_download_failed">下载失败</string>
    <string name="music_downloading">下载中</string>
    <string name="music_load_error">加载失败</string>
    <string name="start_point">当前从%s开始</string>
    <string name="format_select_time">已选取%d秒</string>
    <string name="crop_failed">裁剪失败</string>
    <string name="video_error">视频出错了，请重新选择</string>
    <string name="loading">加载中…</string>
    <string name="gallery_title">相机胶卷</string>
    <string name="save_into_draft">保存草稿</string>
    <string name="publish_video">发布</string>
    <string name="add_topic">添加话题</string>
    <string name="at_friends">\@好友</string>
    <string name="share_message_input">说点啥吧...</string>
    <string name="share_saving_msg">已保存到相册</string>
    <string name="had_saved_draft">已保存至草稿箱，请在个人页查看</string>
    <string name="video_combine_failed">视频合成失败</string>
    <string name="video_not_exist">视频不存在</string>
    <string name="back_edit_video_to_camera">"继续拍摄之前的效果会被清空,
是否继续?"</string>
    <string name="back_edit_video_to_draft">是否保存当前编辑?</string>
    <string name="continue_back_camera">继续</string>
    <string name="text_input_most">最多%s字</string>

    <array name="edit_text_colors">
        <item>#ffffffff</item>
        <item>#fff5330d</item>
        <item>#ffffbb47</item>
        <item>#ffffeb00</item>
        <item>#ffc2ff2f</item>
        <item>#ff00b10a</item>
        <item>#ff26d2ff</item>
        <item>#ff177bfe</item>
        <item>#ff0037c8</item>
        <item>#ff935afc</item>
        <item>#ffff99ff</item>
        <item>#fffc6991</item>
        <item>#ff000000</item>
    </array>
</resources>